Make nsFileControlFrame, nsIsIndexFrame and nsLegendFrame QI to kBlockFrameCID. b=370933 r+sr=bzbarsky